--- a/index.html
+++ b/index.html
@@ -38,9 +38,16 @@
             </div>
 
             <div class="tarjeta">
-                <h3>mantenimiento y refrigueracion</h3>
+                <h3>mantenimiento industrial</h3>
                 <p>Realiza análisis de laboratorio y aplica técnicas de química en distintos procesos industriales.</p>
             </div>
+              <div class="tarjeta">
+                <h3>refrigeracion y climatizacion</h3>
+                <p>el plantel ofrece esta oportunidad de especialidad para conocer todo a cerca de los sistemas de climatizacion.</p>
+            </div>
+
+
+            
         </section>
     </main>
 
@@ -49,4 +56,5 @@
     </footer>
 
 </body>
+
 </html>
